--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="img/favicons/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
     <title>Gllacy</title>
+    <meta name="description" content="">
     <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
