--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
+    <meta property="og:image" content="img/content/og-image.jpg">
+    <meta property="og:image:height" content="473">
+    <meta property="og:image:width" content="903">
+    <meta property="og:url" content="">
+    <meta property="og:title" content="Крафтовое мороженое &laquo;Глэсси&raquo;">
+    <meta property="og:description" content="Элитное мороженое на развес. Ништяк!">
+
+    <link rel="manifest" href="favicons/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <meta name="theme-color" content="#7a9c89">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="img/favicons/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
-    <title>Gllacy</title>
     <meta name="description" content="">
+    <link rel="preload" href="fonts/roboto.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="fonts/robotomedium.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="fonts/robotobold.woff2" as="font" type="font/woff2">
     <link rel="stylesheet" href="css/main.min.css">
+    <title>Gllacy - лучшее мороженое, тоннами!</title>
 </head>
 <body>
-    <h1>HEllo world!</h1>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <a href="#" class="nav__logo">
+                    <img src="img/content/logo.svg" alt="Logo" class="nav__img">
+                </a>
+                <ul class="nav__list">
+                    <li class="nav__item dropdown">
+                        <a href="#" class="nav__link nav__link--dropdown"><span>Каталог</span></a>
+                        <ul class="dropdown__content">
+                            <li class="dropdown__item dropdown__item--active">
+                                <a href="catalog.html" class="dropdown__link dropdown__link--active">Новинки</a>
+                            </li>
+                            <li class="dropdown__item">
+                                <a href="#" class="dropdown__link">Сливочное</a>
+                            </li>
+                            <li class="dropdown__item">
+                                <a href="#" class="dropdown__link">Щербеты</a>
+                            </li>
+                            <li class="dropdown__item">
+                                <a href="#" class="dropdown__link">Фруктовый Лед</a>
+                            </li>
+                            <li class="dropdown__item">
+                                <a href="#" class="dropdown__link">Мелорин</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link"><span>Доставка и оплата</span></a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link"><span>О Компании</span></a>
+                    </li>
+                </ul>
+                <ul class="nav__user-list">
+                    <li class="nav__user-item">
+                        <a class="nav__user-link" href="#">
+                            <svg class="navigation__icon" width="21" height="20">
+                                <title>Поиск</title>
+                                <use xlink:href="img/icons/sprite.svg#icon-magnify"></use>
+                            </svg>
+                        </a>
+                        <form class="search" name="search">
+                            <div class="text-input">
+                                <input class="text-input__field__field" type="search" id="product-search" required>
+                                <label class="text-input__field__label" for="product-search">Что ищем?</label>
+                            </div>
+                        </form>
+                    </li>
+                    <li class="nav__user-item">
+                        <svg class="navigation__icon navigation__icon--spaced" width="21" height="20">
+                            <use xlink:href="img/icons/sprite.svg#icon-enter"></use>
+                        </svg>
+                        <a href="#" class="nav__user-link">Вход</a>
+                        <form action="#" class="login" name="login" method="POST" autocomplete="on">
+                            <div class="text-input">
+                                <input class="text-input__field" type="email" name="email" id="email" required>
+                                <label class="text-input__label" for="email">Электронная почта</label>
+                            </div>
+                            <div class="text-input">
+                                <input class="text-input__field" type="password" name="pass" id="pass" required>
+                                <label class="text-input__label" for="pass">Пароль</label>
+                            </div>
+                            <div class="login__submit">
+                                <button class="login__btn" type="submit">Войти</button>
+                                <div class="login__links">
+                                    <a href="#" class="login__link">Забыли пароль?</a>
+                                    <a href="#" class="login__link">Новая регистрация</a>
+                                </div>
+                            </div>
+                        </form>
+                    </li>
+                    <li class="nav__user-item">
+                        <a href="#" class="nav__user-link">
+                            <svg class="navigation__icon navigation__icon--spaced" width="21" height="20">
+                                <title>Корзина</title>
+                                <use xlink:href="img/icons/sprite.svg#icon-bin"></use>
+                            </svg>
+                            Пусто
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
