--- a/app/index.html
+++ b/app/index.html
@@ -197,90 +197,121 @@
                 </ul>
             </section>
             <section class="card">
-                <div class="container">
-                    <div class="card__list">
-                        <div class="card__item">
-                            <picture>
-                                <source type="image/webp" srcset="img/content/1.webp">
-                                <img class="card__image" src="img/content/1.png" width="267" height="267" alt="Изображение мороженого">
-                            </picture>
-                            <p class="card__price">
-                                <span class="card__cost">310</span>
-                                <svg class="card__rouble" width="31" height="36">
-                                    <title>Рублей</title>
-                                    <use xlink:href="img/icons/sprite.svg#icon-ruble"></use>
-                                </svg>
-                                <span class="card__kilos">/кг</span>
-                            </p>
-                            <h4 class="card__name">
-                                <a class="card__link" href="#">
-                                    <span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
-                                </a>
-                            </h4>
-                            <button class="btn btn--card" type="button">Быстрый просмотр</button>
-                        </div>
-                        <div class="card__item">
-                            <picture>
-                                <source type="image/webp" srcset="img/content/2.webp">
-                                <img class="card__image" src="img/content/2.png" width="267" height="267" alt="Изображение мороженого">
-                            </picture>
-                            <p class="card__price">
-                                <span class="card__cost">380</span>
-                                <svg class="card__rouble" width="31" height="36">
-                                    <title>Рублей</title>
-                                    <use xlink:href="img/icons/sprite.svg#icon-ruble"></use>
-                                </svg>
-                                <span class="card__kilos">/кг</span>
-                            </p>
-                            <h4 class="card__name">
-                                <a class="card__link" href="#">
-                                    <span>Сливочно-кофейное с кусочками шоколада</span>
-                                </a>
-                            </h4>
-                            <button class="btn btn--card" type="button">Быстрый просмотр</button>
-                        </div>
-                        <div class="card__item">
-                            <picture>
-                                <source type="image/webp" srcset="img/content/3.webp">
-                                <img class="card__image" src="img/content/3.png" width="267" height="267" alt="Изображение мороженого">
-                            </picture>
-                            <p class="card__price">
-                                <span class="card__cost">355</span>
-                                <svg class="card__rouble" width="31" height="36">
-                                    <title>Рублей</title>
-                                    <use xlink:href="img/icons/sprite.svg#icon-ruble"></use>
-                                </svg>
-                                <span class="card__kilos">/кг</span>
-                            </p>
-                            <h4 class="card__name">
-                                <a class="card__link" href="#">
-                                    <span>Сливочно-клубничное с присыпкой из белого шоколада</span>
-                                </a>
-                            </h4>
-                            <button class="btn btn--card" type="button">Быстрый просмотр</button>
-                        </div>
-                        <div class="card__item">
-                            <picture>
-                                <source type="image/webp" srcset="img/content/4.webp">
-                                <img class="card__image" src="img/content/4.png" width="267" height="267" alt="Изображение мороженого">
-                            </picture>
-                            <p class="card__price">
-                                <span class="card__cost">415</span>
-                                <svg class="card__rouble" width="31" height="36">
-                                    <title>Рублей</title>
-                                    <use xlink:href="img/icons/sprite.svg#icon-ruble"></use>
-                                </svg>
-                                <span class="card__kilos">/кг</span>
-                            </p>
-                            <h4 class="card__name">
-                                <a class="card__link" href="#">
-                                    <span>Сливочное крем-брюле с карамельной подливкой</span>
-                                </a>
-                            </h4>
-                            <button class="btn btn--card" type="button">Быстрый просмотр</button>
-                        </div>
+                <div class="card__list">
+                    <div class="card__item">
+                        <picture>
+                            <source type="image/webp" srcset="img/content/1.webp">
+                            <img class="card__image" src="img/content/1.png" width="267" height="267" alt="Изображение мороженого">
+                        </picture>
+                        <p class="card__price">
+                            <span class="card__cost">310</span>
+                            <svg class="card__rouble" width="31" height="36">
+                                <title>Рублей</title>
+                                <use xlink:href="img/icons/sprite.svg#icon-ruble"></use>
+                            </svg>
+                            <span class="card__kilos">/кг</span>
+                        </p>
+                        <h4 class="card__name">
+                            <a class="card__link" href="#">
+                                <span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
+                            </a>
+                        </h4>
+                        <button class="btn btn--card" type="button">Быстрый просмотр</button>
+                    </div>
+                    <div class="card__item">
+                        <picture>
+                            <source type="image/webp" srcset="img/content/2.webp">
+                            <img class="card__image" src="img/content/2.png" width="267" height="267" alt="Изображение мороженого">
+                        </picture>
+                        <p class="card__price">
+                            <span class="card__cost">380</span>
+                            <svg class="card__rouble" width="31" height="36">
+                                <title>Рублей</title>
+                                <use xlink:href="img/icons/sprite.svg#icon-ruble"></use>
+                            </svg>
+                            <span class="card__kilos">/кг</span>
+                        </p>
+                        <h4 class="card__name">
+                            <a class="card__link" href="#">
+                                <span>Сливочно-кофейное с кусочками шоколада</span>
+                            </a>
+                        </h4>
+                        <button class="btn btn--card" type="button">Быстрый просмотр</button>
+                    </div>
+                    <div class="card__item">
+                        <picture>
+                            <source type="image/webp" srcset="img/content/3.webp">
+                            <img class="card__image" src="img/content/3.png" width="267" height="267" alt="Изображение мороженого">
+                        </picture>
+                        <p class="card__price">
+                            <span class="card__cost">355</span>
+                            <svg class="card__rouble" width="31" height="36">
+                                <title>Рублей</title>
+                                <use xlink:href="img/icons/sprite.svg#icon-ruble"></use>
+                            </svg>
+                            <span class="card__kilos">/кг</span>
+                        </p>
+                        <h4 class="card__name">
+                            <a class="card__link" href="#">
+                                <span>Сливочно-клубничное с присыпкой из белого шоколада</span>
+                            </a>
+                        </h4>
+                        <button class="btn btn--card" type="button">Быстрый просмотр</button>
+                    </div>
+                    <div class="card__item">
+                        <picture>
+                            <source type="image/webp" srcset="img/content/4.webp">
+                            <img class="card__image" src="img/content/4.png" width="267" height="267" alt="Изображение мороженого">
+                        </picture>
+                        <p class="card__price">
+                            <span class="card__cost">415</span>
+                            <svg class="card__rouble" width="31" height="36">
+                                <title>Рублей</title>
+                                <use xlink:href="img/icons/sprite.svg#icon-ruble"></use>
+                            </svg>
+                            <span class="card__kilos">/кг</span>
+                        </p>
+                        <h4 class="card__name">
+                            <a class="card__link" href="#">
+                                <span>Сливочное крем-брюле с карамельной подливкой</span>
+                            </a>
+                        </h4>
+                        <button class="btn btn--card" type="button">Быстрый просмотр</button>
                     </div>
                 </div>
+            </section>
+            <section class="aboutus">
+                <h2 class="aboutus__heading">Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного<br> производства на развес</h2>
+                <ul class="aboutus__list">
+                    <li class="aboutus__item">
+                        <svg class="aboutus__icon" width="49" height="49">
+                            <title>Мороженое</title>
+                            <use xlink:href="img/icons/sprite.svg#icon-icecream"></use>
+                        </svg>
+                        <p class="aboutus__description">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+                    </li>
+                    <li class="aboutus__item">
+                        <svg class="aboutus__icon" width="49" height="49">
+                            <title>Корова</title>
+                            <use xlink:href="img/icons/sprite.svg#icon-cow"></use>
+                        </svg>
+                        <p class="aboutus__description">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+                    </li>
+                    <li class="aboutus__item">
+                        <svg class="aboutus__icon" width="49" height="49">
+                            <title>Лист</title>
+                            <use xlink:href="img/icons/sprite.svg#icon-leaf"></use>
+                        </svg>
+                        <p class="aboutus__description">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+                    </li>
+                    <li class="aboutus__item">
+                        <svg class="aboutus__icon" width="49" height="49">
+                            <title>Лист</title>
+                            <use xlink:href="img/icons/sprite.svg#icon-thermo"></use>
+                        </svg>
+                        <p class="aboutus__description">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+                    </li>
+                </ul>
             </section>
         </div>
     </main>
